correct product flicker

--- a/frontend/src/screens/Collections.css
+++ b/frontend/src/screens/Collections.css
@@ -35,6 +35,10 @@
     background-color: #f1f1f1;
 }
 
+.collections__img--light {
+    background-color: #f1f1f1;
+}
+
 .collections__description {
     font-size: 1.6rem;
 }
